--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "react-hoc-aria-live",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "build/index.js",
   "scripts": {
+    "build": "babel ./src -d build",
     "test:watch": "jest --watch",
     "test": "jest --coverage"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2"
   },
