--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "react-aria-announcer",
   "version": "1.0.0",
   "description": "",
-  "main": "build/index.js",
+  "main": "build/src/index.js",
   "scripts": {
-    "build": "babel ./src -d build",
+    "start": "babel ./example -d build/example && cp ./example/index.html  build/example/index.html && open build/example/index.html",
+    "build": "babel ./src -d build/src",
     "test:watch": "jest --watch",
     "test": "jest --coverage"
   },
