--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "react-aria-announcer",
   "version": "1.0.0",
   "description": "",
-  "main": "build/src/index.js",
+  "main": "build/bundle.js",
   "scripts": {
+    "build:bundle": "webpack",
     "build": "babel ./src -d build/src",
+    "demo": "ENV=development webpack-dev-server --config webpack.example.config.js",
     "test:watch": "jest --watch",
     "test": "jest --coverage"
   },
-  "author": "",
+  "author": "Phoebe Greig",
   "license": "ISC",
   "dependencies": {
     "prop-types": "^15.6.2",
@@ -23,9 +25,14 @@
     "@babel/preset-react": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
+    "babel-loader": "^8.0.4",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
-    "jest": "^23.5.0"
+    "html-webpack-plugin": "^3.2.0",
+    "jest": "^23.5.0",
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   },
   "jest": {
     "projects": [
