Example use and exporting context

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "build/src/index.js",
   "scripts": {
     "build": "babel ./src -d build/src",
+    "start": "ENV=development webpack-dev-server --config webpack.example.config.js",
     "test:watch": "jest --watch",
     "test": "jest --coverage"
   },
@@ -26,6 +27,11 @@
     "@babel/preset-react": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
+    "babel-loader": "^8.0.4",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.10.0",
     "jest": "^23.5.0"
