--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "react-aria-announcer",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "",
-  "main": "build/src/index.js",
+  "main": "build/index.js",
   "scripts": {
-    "build": "babel ./src -d build/src",
+    "build": "babel ./src -d build/",
     "start": "ENV=development webpack-dev-server --config webpack.example.config.js",
     "test:watch": "jest --watch",
     "test": "jest --coverage"
